update tmux with pane title

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,10 @@ bind | splitw -h -c '#{pane_current_path}'
 
 set-option -g mouse on
 
+set -g pane-border-status top
+set -g pane-border-format "#P: #{pane_current_command}"
+# set -g pane-border-format '#P: #(ps --no-headers -t #{pane_tty} -o args -O-c)'
+
 bind k select-pane -U
 bind j select-pane -D
 bind h select-pane -L
@@ -25,5 +29,3 @@ bind -r ^k resizep -U 5
 bind -r ^j resizep -D 5
 bind -r ^h resizep -L 5
 bind -r ^l resizep -R 5
-
-
